[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/roboto_42.tres" type="DynamicFont" id=1]
[ext_resource path="res://minigames/PaperMinigame/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/roboto_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/roboto_32.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0768107
anchor_top = 0.263176
anchor_right = 0.955144
anchor_bottom = 0.729973
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaperScoreLabel" type="Label" parent="Panel"]
anchor_top = 0.621
anchor_right = 1.001
anchor_bottom = 0.726
margin_right = -0.526978
custom_fonts/font = ExtResource( 4 )
text = "{{paper_amount}}"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsLabel" type="Label" parent="Panel"]
anchor_top = 0.494
anchor_right = 1.0
anchor_bottom = 0.598
margin_top = -0.13208
margin_right = -0.999939
margin_bottom = 0.155884
custom_fonts/font = ExtResource( 4 )
text = "Recycled Paper:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReasonLabel" type="Label" parent="Panel"]
anchor_left = 0.089
anchor_top = 0.048
anchor_right = 0.911
anchor_bottom = 0.444
margin_left = 0.0970078
margin_top = 0.055994
margin_right = -0.0969543
margin_bottom = -0.232071
custom_fonts/font = ExtResource( 3 )
text = "{{reason}}"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackButton" type="Button" parent="Panel"]
anchor_left = 0.391388
anchor_top = 0.844091
anchor_right = 0.592526
anchor_bottom = 0.961246
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}
